<resources>
    <string name="app_name">Money Transaction</string>
    <string name="name_label">Full Name</string>
    <string name="phone_label">Phone Ex: +9198..</string>
    <string name="email_label">Your Email Address</string>
    <string name="pass_label">Password</string>
    <string name="confpass_label">Confirm Password</string>
    <string name="amounttv_label">₹</string>
    <string name="twoStepVerificationcb_label">Enable Two-Step Verification Login</string>

    <string name="enterAmount_label">Enter Amt</string>
    <string name="enterOTP_label">Enter OTP</string>
    <string name="writeDescription_label">Write a description.</string>
    <string name="requestedBy_label">Requested By</string>
    <string name="to_label">To</string>
    <string name="description_label">Description</string>
    <string name="total_label">Total</string>
    <string name="pay_label">Pay</string>
    <string name="no_grant_request">You don\'t have any grant requests yet!</string>
    <string name="no_transactions">You don\'t have any transaction history yet!</string>
    <string name="no_requestable">Sorry! Currently no requestable user available</string>


    <string name="login_label">Login</string>
    <string name="signup_label">create a new account</string>

    <string name="signupb_label">Create</string>
    <string name="makeRequestb_label">Make Request</string>
    <string name="sendRequestb_label">Send Request</string>
    <string name="viewRequestb_label">View Request</string>
    <string name="grantFullb_label">Grant Full</string>
    <string name="grantPartialb_label">Grant Partial</string>

    <string name="warncl_amount_desc_empty">You cannot leave amount or description empty!</string>


</resources>