<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.LoginFragment">

    <RelativeLayout
        android:layout_height= "match_parent"
        android:layout_width= "match_parent"
        android:background="@drawable/bg2">



    <androidx.cardview.widget.CardView
        style="@style/CardViewCustomStyle"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="150dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <LinearLayout
                android:id="@+id/llEmail"
                android:layout_centerHorizontal="true"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <ImageView
                    android:layout_marginTop="25dp"
                    android:layout_width="27dp"
                    android:layout_height="30dp"
                    android:src="@drawable/email_icon"
                    />
                <EditText
                    android:id="@+id/etEmail"
                    android:hint="@string/email_label"
                    android:inputType="text"
                    style="@style/LoginEditTextStyle"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/llPassword"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/llEmail"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <ImageView
                    android:layout_marginTop="25dp"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/pass_icon"
                    />

                <EditText
                    android:id="@+id/etPassword"
                    android:hint="@string/pass_label"
                    android:inputType="textPassword"
                    style="@style/LoginEditTextStyle"
                    />

            </LinearLayout>

            <Button
                android:id="@+id/bLogin"
                android:layout_below="@id/llPassword"
                android:text="@string/login_label"
                android:layout_centerHorizontal="true"
                style="@style/ButtonStyle"

                />

            <TextView
                android:id="@+id/tvSignup"
                android:layout_below="@id/bLogin"
                android:text="@string/signup_label"
                android:layout_centerHorizontal="true"
                style="@style/LinkStyle"

                />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>


    </RelativeLayout>
</FrameLayout>