<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.MakeRequestUserDetailFragment">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            android:id="@+id/tvRequestedByLabel"
            android:text="@string/requestedBy_label"
            android:textSize="15sp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/FullBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card_view"
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvRequestedByLabel"
            app:cardCornerRadius="3dp"
            app:cardElevation="4dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="20dp"

            >

            <RelativeLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/llName"
                    android:layout_centerHorizontal="true"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <ImageView
                        android:layout_margin="20dp"
                        android:layout_width="27dp"
                        android:layout_height="30dp"
                        android:src="@drawable/usr_icon"
                        />

                    <TextView
                        android:id="@+id/tvName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:padding="20dp"
                        android:text="Test"
                        />

                </LinearLayout>


                <LinearLayout
                    android:id="@+id/llEmail"
                    android:layout_centerHorizontal="true"
                    android:orientation="horizontal"
                    android:layout_below="@+id/llName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <ImageView
                        android:layout_margin="20dp"
                        android:layout_width="27dp"
                        android:layout_height="30dp"
                        android:src="@drawable/email_icon"
                        />

                    <TextView

                        android:id="@+id/tvEmail"

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15sp"
                        android:padding="20dp"
                        android:text="Test@gmail.com"

                        />

                </LinearLayout>
            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:id="@+id/llAmount"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal"
            android:layout_below="@+id/card_view"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginBottom="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            >
            <TextView

                android:text="@string/amounttv_label"
                android:textSize="50sp"
                android:textColor="@color/FullBlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"


                />


                <TextView
                    android:id="@+id/tvAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="40sp"
                    />


        </LinearLayout>

        <TextView
            android:id="@+id/tvDescriptionLabel"
            android:text="@string/description_label"
            android:textSize="15sp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp"
            android:textColor="@color/FullBlack"
            android:layout_below="@id/llAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

            <TextView
                android:id="@+id/tvDescription"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="30dp"
                android:layout_below="@id/tvDescriptionLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="17sp"
                android:background="@drawable/description_textview_border"
                android:padding="10dp"

                />



        <Button
            android:id="@+id/bGrantFullRequest"
            android:text="@string/grantFullb_label"
            style="@style/ButtonStyle"
            android:layout_alignParentBottom="true"
            android:layout_margin="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"



            ></Button>
        <Button
            android:id="@+id/bGrantPartialRequest"
            android:text="@string/grantPartialb_label"
            style="@style/ButtonStyle"
            android:layout_toRightOf="@id/bGrantFullRequest"
            android:layout_alignParentBottom="true"
            android:layout_margin="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"


            ></Button>
    </RelativeLayout>
</FrameLayout>